tests/ui/direct_configuration-f-2.stderr
error[E0277]: the trait bound `MyConfig: Default` is not satisfied
  --> $DIR/direct_configuration-f-2.rs:16:17
   |
16 |     let conf1 = <MyConfig as EasyConfiguration>::load().await;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `MyConfig`
   |
   = note: required because of the requirements on the impl of `EasyConfiguration` for `MyConfig`

error[E0277]: the trait bound `MyConfig: Default` is not satisfied
  --> $DIR/direct_configuration-f-2.rs:16:17
   |
16 |     let conf1 = <MyConfig as EasyConfiguration>::load().await;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `MyConfig`
   |
  ::: $WORKSPACE/src/configuration.rs
   |
   |     async fn load() -> Self::Result;
   |              ---- required by this bound in `blockz::configuration::EasyConfiguration::load`
   |
   = note: required because of the requirements on the impl of `EasyConfiguration` for `MyConfig`
